--- a/my web/index.html
+++ b/my web/index.html
@@ -31,12 +31,12 @@
 
     <main>
         <section id="hero">
-            <div>
+            <div id="heroImg">
                 <h1>Cookies so good, you won’t want to share!</h1>
                 <img src="cookie1.png">
                 <img src="cookie2.png">
             </div>
-            <div>
+            <div id="heroButtons">
                 <h2>Craving cookies? Our freshly baked treats are just a click away—perfect for any occasion or simply to brighten your day!</h2>
                 <button>Order Now</button>
                 <button>Shop Our Cookies</button>
